k8s/ingresses/prod/stocks-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stocks-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ng.stocks4fun.com
    - gateway.stocks4fun.com
    secretName: letsencrypt-prod
  rules:
  - host: ng.stocks4fun.com
    http:
      paths:
      - backend:
          serviceName: ng-service
          servicePort: 8080
  - host: gateway.stocks4fun.com
    http:
      paths:
      - backend:
          serviceName: gateway-service
          servicePort: 8080
